css/index.css
/* ... */
table.table_grid td
{
	padding: 3px;
	/*border-bottom: 1px solid #fff;
	border-right: 1px solid #fff;*/
}

/* GenericList */
.additional_row
{
	padding: 0.5em 0 0.5em 0;
}
table.table_grid thead tr.catbg th
{
	white-space: nowrap;
}

/* table_grid styles for Profile > Show Permissions. */
#permissions table.table_grid  td
{
	padding: 0.4em 0.8em;
	cursor: default;
} 

/* Common styles used to add corners to divisions.
------------------------------------------------------- */
.windowbg span.topslice, .windowbg2 span.topslice
{
	display: block;
	/*padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 -30px no-repeat;*/
	height: 1em;
}
/*.windowbg span.topslice span, .windowbg2 span.topslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% -30px no-repeat;
	height: 11px;
}*/
.windowbg span.botslice, .windowbg2 span.botslice
{
	display: block;
	/*padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 -40px no-repeat;*/
	font-size: 5px;
	line-height: 5px;
	margin-bottom: 0.2em;
	
	height: 1em;
}
/*.windowbg span.botslice span, .windowbg2 span.botslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% -40px no-repeat;
	height: 11px;
}*/

.approvebg span.topslice
{
	display: block;
	padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 0 no-repeat;
}
.approvebg span.topslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% 0 no-repeat;
	height: 11px;
}
.approvebg span.botslice
{
	display: block;
	padding-left: 20px;
	background: url(../images/theme/main_block.png) 0 -11px no-repeat;
	margin-bottom: 0.2em;
}
.approvebg span.botslice span
{
	display: block;
	background: url(../images/theme/main_block.png) 100% -11px no-repeat;
	height: 11px;
}
.postbg
{
	border-left: 1px solid #7f7f7f;
	border-right: 1px solid #7f7f7f;
}

/* Used for sections that need somewhat larger corners.
----------------------------------------------------------- */
.roundframe
{
	padding: 0;
	/*background: #f5f5f5;*/
	background-color: #364D5D;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#364D5D', endColorstr='#1F3A4D', GradientType=0);
	background: -webkit-gradient(linear, left top, left bottom, from(#364D5D), to(#1F3A4D));
	background: -webkit-linear-gradient(#364D5D, #1F3A4D);
	background:    -moz-linear-gradient(#364D5D, #1F3A4D);
	background:     -ms-linear-gradient(#364D5D, #1F3A4D);
	background:      -o-linear-gradient(#364D5D, #1F3A4D);
	background:         linear-gradient(#364D5D, #1F3A4D);
	
	/*border-left: 1px solid #c5c5c5;
	border-right: 1px solid #c5c5c5;*/
	border: 1px solid #547280;
}
.roundframe dl, .roundframe dt, .roundframe p
{
	margin: 0;
}
.roundframe p
{
	padding: 0.5em;
}
span.upperframe
{
	/*padding: 0;
	display: block;
	background: url(../images/theme/main_block.png) 0 -90px no-repeat;
	padding-left: 20px;*/
	display: none;
}
span.upperframe span
{
	/*padding: 0;
	height: 12px;
	display: block;
	background: url(../images/theme/main_block.png) 100% -90px no-repeat;*/
	display: none;
}
span.lowerframe
{
	/*padding: 0;
	display: block;
	background: url(../images/theme/main_block.png) 0 -102px no-repeat;
	padding-left: 20px;*/
	display: none;
}
span.lowerframe span
{
	padding: 0;
	height: 12px;
	display: block;
	background: url(../images/theme/main_block.png) 100% -102px no-repeat;
}

/* The main content area.
------------------------------------------------------- */
.content
{
	padding: 0.5em 1.2em;
	margin: 0;
	border: none;
}
.content p
{
	margin: 0 0 0.5em 0;
}

/* Styles used by the auto suggest control.
------------------------------------------------------- */
.auto_suggest_div
{
	border: 1px solid #000;
	position: absolute;
	visibility: hidden;
}
.auto_suggest_item
{
	background-color: #ddd;
}
.auto_suggest_item_hover
{
	background-color: #888;
	cursor: pointer;
	color: #eee;
}

/* Styles for the standard dropdown menus.
------------------------------------------------------- */
#main_menu
{
	padding: 0;
	float: left;
	margin: 0;
	width: 98%;
	
	font-size: 110%;
	
	background-color: #191919;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#45494D', endColorstr='#191919', GradientType=0);
	background: -webkit-gradient(linear, left top, left bottom, from(#45494D), to(#191919));
	background: -webkit-linear-gradient(#45494D, #191919);
	background:    -moz-linear-gradient(#45494D, #191919);
	background:     -ms-linear-gradient(#45494D, #191919);
	background:      -o-linear-gradient(#45494D, #191919);
	background:         linear-gradient(#45494D, #191919);
	
	border-style: solid;
	border-width: 1px;
	border-color: transparent #45494D #1C2024;
}

.dropmenu, .dropmenu ul
{
	list-style: none;
	line-height: 1em;
	padding: 0;
	margin: 0;
}
.dropmenu
{
	/*padding: 0 0.5em;*/
	padding: 0;
}
.dropmenu a
{
	display: block;
	/*color: #000;*/
	color: white;
	text-transform: uppercase;
	text-decoration: none;
}
.dropmenu a span
{
	display: block;
	padding: 0 0 0 5px;
	font-size: 0.9em;
}
/* the background's first level only */
.dropmenu li a.firstlevel
{
	/*margin-right: 8px;*/
}
.dropmenu li a.firstlevel span.firstlevel
{
	display: block;
	/*position: relative;
	left: -5px;
	padding-left: 5px;*/
	padding: 1em 1em 0.9em;
	/*height: 22px;*/
	line-height: 19px;
	white-space: pre;
	
	border-right: 1px solid #2D2F33;
}
.dropmenu li
{
	float: left;
	padding: 0;
	margin: 0;
	position: relative;
}
.dropmenu li ul
{
	z-index: 90;
	display: none;
	position: absolute;
	width: 19.2em;
	font-weight: normal;
	border-bottom: 1px solid #999;
	background: url(../images/theme/menu_gfx.png) 0 -130px no-repeat;
	padding: 7px 0 0 0;
}
.dropmenu li li
{
	width: 19em;
	margin: 0;
	/*border-left: 1px solid #999;
	border-right: 1px solid #999;*/
	border-left: 1px solid #45494D;
	border-right: 1px solid #45494D;
}
.dropmenu li li a span
{
	display: block;
	padding: 8px;
}
.dropmenu li ul ul
{
	margin: -1.8em 0 0 13em;
}
/* ... */

